correction in the form header

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <p>(800)GCLIFFS</p>
                 <h2>Email:</h2>
                 <p>info@greatcliffs.com</p>
-                <h2>ill Out This Form:</h2>
+                <h2>Fill Out This Form:</h2>
              <form action="/signup" method="post">
                 <fieldset>
                     <legend>Contact Form</legend>
