added content for contact form

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <!--  Main Content -->
             <main>
                 <h1>Contacting Us</h1>
-                <p>If you need more information about the Cliffs, Hours of Operations, Facilities or questions about this site, please contact us bu using one of the following:</p>
+                <p>If you need more information about the Cliffs, Hours of Operations, Facilities or questions about this site, please contact us by using one of the following:</p>
                 <h2>Phone:</h2>
                 <p>(800)GCLIFFS</p>
                 <h2>Email:</h2>
