--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
                 width: 100%;
                 background-color: #4288c3;
             }
+            section #partners{
+                width: 1200px;
+                padding:2em 0 2em 0;
+                margin:0 auto;
+                text-align: center;
+            }
+            section #partners .partner{
+                display: inline-block;
+                margin: 0 0.75em;
+                padding: 1.3em 1.5em;
+                background-color: #fff;
+                border-radius: 50%;
+            }
+            section #partners .partner img{
+                width:90px;
+                height: 90px;
+            }
         </style>
     </head>
     <body id="home">
@@ -100,12 +117,12 @@
     </main> <!-- End  Main Content -->
     <section>
         <ul id="partners">
-            <li class="partners"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
-            <li class="partners"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
-            <li class="partners"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adventure"></li>
-            <li class="partners"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
-            <li class="partners"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
-            <li class="partners"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
+            <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+            <li class="partner"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
+            <li class="partner"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adventure"></li>
+            <li class="partner"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
+            <li class="partner"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
+            <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
         </ul>
     </section>
     <footer>
