--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
                 width:90px;
                 height: 90px;
             }
+            /* footer */
+            footer{
+                width: 100%;
+                height: 155px;
+                padding-bottom: 1em;
+                background-color: #ecfab8;
+            }
+            footer #nondisclaimer .copy{
+                padding: 3.5em 3.5em 3.5em 13em;
+                float: left;
+                font-size: 0.9em;
+            }
+            footer #nondisclaimer .social{
+                padding: 2.5em;
+                margin-right: 9.25em;
+                float: right;
+            }
         </style>
     </head>
     <body id="home">
