--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title >Great Cliff's of California</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Embed Style css -->
         <style>
             /* header */
@@ -104,6 +105,37 @@
                 margin-right: 9.25em;
                 float: right;
             }
+            footer #disclaimer{
+                clear: both;
+            }
+            footer #disclaimer p{
+                font-size: 0.8em;
+                text-align: center;
+            }
+            footer #nondisclaimer .social .fa{
+              padding: 15px;
+              font-size: 15px;
+              width: 15px;
+              text-align: center;
+              text-decoration: none;
+              margin: 0 4px;
+              border-radius: 50%;
+            }
+            footer #nondisclaimer .social .fa:hover{
+                opacity: 0.7;
+            }
+            footer #nondisclaimer .social .fa-facebook{
+               background:#3b5998;
+               color: white;
+            }
+            footer #nondisclaimer .social .fa-instagram{
+               background:#55acee;
+               color: white;
+            }
+            footer #nondisclaimer .social .fa-twitter{
+               background:#126688;
+               color: white;
+            }
         </style>
     </head>
     <body id="home">
@@ -145,7 +177,11 @@
     <footer>
         <div  id="nondisclaimer">
             <div class="copy">&copy;Copyright 2020 :: GreatCliffs.com</div>
-            <div class="social"><h3>Facebook Image<br>Instagram Image<br>Twitter Image</h3></div>
+            <div class="social">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-twitter" ></a>
+            </div>
         </div>
         <div  id="disclaimer">
             <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
