--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title meta charset="utf-8"></title>
+        <title >Great Cliff's of California</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body id="contact">
         <!-- Container to wrap everything -->
         <div id ="container">
             <header>
-                <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564"> 
                     <div class ="main-header">
                         <div class="logo">
                             <img src="images/logo.png" alt="Great Cliff's Logo" width="125">
@@ -17,7 +19,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li>Cliffs</li>
                             <li><a href="activities.html">Activities</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li  class="active"><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
                      </div>
