--- a/activities.html
+++ b/activities.html
@@ -28,7 +28,7 @@
       <main>
         <h1>Activities</h1>
         <p>There are many planned activities at all the cliff sites. Some are scheduled daily, weekly, monthly and yearly. These activities are not however run by the state park and recreational department. They are operated and manage by private vendors but are partners with the state department. Therefore, for schedule inquiries or information, please contact them directly. For a list of activities, please refer to the table below:</p>
-        <table border="1">
+        <table>
             <caption>Activities at the Cliffs</caption>
             <thead></thead>
             <tr>
@@ -60,30 +60,34 @@
                     <td>Bike Meetup Group</td>
                     <td>Campground Adventure</td>
                 </tr>
+                <tr>
+                    <td>Canyon Explorer</td>
+                    <td>Kayak Down</td>
+                    <td>Sky Diving for Beginners</td>
+                    <td>Not Available</td>
+                    <td>Sunset Camping</td>
+                </tr>
             </tbody>
-            <tfoot>  <tr>
-                <td>Canyon Explorer</td>
-                <td>Kayak Down</td>
-                <td>Sky Diving for Beginners</td>
-                <td>Not Available</td>
-                <td>Sunset Camping</td>
-            </tr></tfoot>
         </table>
         </main> <!-- End  Main Content -->
         <section>
             <ul id="partners">
-                <li class="partners"><h3>Partner 1 Image</h3></li>
-                <li class="partners"><h3>Partner 2 Image</h3></li>
-                <li class="partners"><h3>Partner 3 Image</h3></li>
-                <li class="partners"><h3>Partner 4 Image</h3></li>
-                <li class="partners"><h3>Partner 5 Image</h3></li>
-                <li class="partners"><h3>Partner 6 Image</h3></li>
+                <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+                <li class="partner"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
+                <li class="partner"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adventure"></li>
+                <li class="partner"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
+                <li class="partner"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
+                <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
             </ul>
         </section>
         <footer>
             <div  id="nondisclaimer">
                 <div class="copy">&copy;Copyright 2020 :: GreatCliffs.com</div>
-                <div class="social"><h3>Facebook Image<br>Instagram Image<br>Twitter Image</h3></div>
+                <div class="social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-twitter" ></a>
+                </div>
             </div>
             <div  id="disclaimer">
                 <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
