--- a/contact.html
+++ b/contact.html
@@ -61,18 +61,22 @@
             </main> 
             <section>
                 <ul id="partners">
-                    <li class="partners"><h3>Partner 1 Image</h3></li>
-                    <li class="partners"><h3>Partner 2 Image</h3></li>
-                    <li class="partners"><h3>Partner 3 Image</h3></li>
-                    <li class="partners"><h3>Partner 4 Image</h3></li>
-                    <li class="partners"><h3>Partner 5 Image</h3></li>
-                    <li class="partners"><h3>Partner 6 Image</h3></li>
+                    <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+                    <li class="partner"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
+                    <li class="partner"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adventure"></li>
+                    <li class="partner"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
+                    <li class="partner"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
+                    <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
                 </ul>
             </section>
             <footer>
                 <div  id="nondisclaimer">
                     <div class="copy">&copy;Copyright 2020 :: GreatCliffs.com</div>
-                    <div class="social"><h3>Facebook Image<br>Instagram Image<br>Twitter Image</h3></div>
+                    <div class="social">
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter" ></a>
+                    </div>
                 </div>
                 <div  id="disclaimer">
                     <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
