commented li partner html and added same in script

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </main> <!-- End  Main Content -->
     <section>
         <ul id="partners">
-            <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+            <!-- <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
             <li class="partner"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
             <li class="partner"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adventure"></li>
             <li class="partner"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
             <li class="partner"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
-            <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
+            <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li> -->
         </ul>
     </section>
     <footer>
@@ -141,6 +141,18 @@ function currentTime() {
 }
 
 currentTime();
+// code to show Partner section
+       // Create an array of partner images
+var partnerImages = [
+    "partner-bustour.png",
+    "partner-cabinrental.png",
+    "partner-campingadv.png",
+    "partner-collegetours.png",
+    "partner-rentalbike.png",
+    "partner-tourgroup.png"
+];
+
+
     </script>
     </body>
 </html>
