created external JS folder , created digClock file and moved digClock JS code to external file

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,11 @@
                         <label>How did you hear about us:</label>  
                         <textarea></textarea>
                     </div>
-                
+                    <!-- Random codes -->
+                    <div class="randomCode">
+                        <input type="text" name="randomcode" placeholder="Enter Characters">
+                        <p id="codes"></p>
+                    </div>
                     <div class="button">
                         <input type="submit" value="Inquire">
                     </div> 
