--- a/contact.html
+++ b/contact.html
@@ -112,5 +112,6 @@
             </footer>
         </div>
         <script src="js/site_script.js"></script>
+        <script src="js/randomcodes.js"></script>
     </body>
 </html>
