--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body id="contact">
+    <body id="contact" onLoad="disableButton(true)">
         <!-- Container to wrap everything -->
         <div id ="container">
             <header>
@@ -78,7 +78,7 @@
                     </div>
                     <!-- Random codes -->
                     <div class="randomCode">
-                        <input type="text" name="randomcode" placeholder="Enter Characters">
+                        <input type="text"  id = "codeenetered" name="randomcode" placeholder="Enter Characters">
                         <p id="codes"></p>
                     </div>
                     <div class="button">
@@ -111,7 +111,6 @@
             </div>
             </footer>
         </div>
-        <script src="js/site_script.js"></script>
-        <script src="js/randomcodes.js"></script>
+        <script defer src="js/randomcodes.js"></script>
     </body>
 </html>
