--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                         <p id="codes"></p>
                     </div>
                     <div class="button">
-                        <input type="submit" value="Inquire">
+                        <input id = "submit" type="submit" value="Inquire">
                     </div> 
                 </fieldset>  
                 </form>
