added logic to highlight td in jquery

--- a/activities.html
+++ b/activities.html
@@ -51,7 +51,7 @@
                     <td>Western Kayak Meetup</td>
                     <td>Seacliff Diving</td>
                     <td>Bicycle for One</td>
-                    <td>Youth Camp</td>
+                    <td>Not Available</td>
                 </tr>
                 <tr>
                     <td>Treasure Trails</td>
