added logic to add live box

--- a/cliffs.html
+++ b/cliffs.html
@@ -47,6 +47,11 @@
                 <img src="images/cliff-south-canyon.jpg" alt="Cliff South Canyon" width="500">
             </div>
         </div>
+        <div class="backdrop"></div>
+        <div class="lightbox">
+            <span class="close">&times;</span>
+            <img class="lightbox-image" src="" alt="Enlarged Image">
+          </div>
      
     </main> <!-- End  Main Content -->
     <section>
@@ -73,6 +78,7 @@
     </div>
     </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/site_script.js"></script>
     </body>
 </html>
