--- a/index.html
+++ b/index.html
@@ -4,25 +4,45 @@
         <title >Great Cliff's of California</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                <!-- Bootstrap CSS -->
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body id="home">
         <!-- Container to wrap everything -->
         <div id="container">
-            <header>
-                    <div class ="main-header">
-                        <div class="logo">
+                  <div class ="main-header">
+                        <!-- <div class="logo">
                             <img src="images/logo.png" alt="Great Cliff's Logo" width="125">
-                        </div>
-                    <nav class="main-menu">
-                        <ul>
-                            <li class="active"><a href="index.html">Home</a></li>
-                            <li><a href="cliffs.html">Cliffs</a></li>
-                            <li><a href="activities.html">Activities</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
+                        </div> -->
+                        <nav class="main-menu navbar navbar-expand-lg navbar-dark bg-dark">
+                            <div class="container">
+                                <div class="logo">
+                                    <img src="images/logo.png" alt="Great Cliff's Logo" width="125">
+                                </div>
+                              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                              </button>
+                              <div class="collapse navbar-collapse" id="navbarNav">
+                                <ul class="navbar-nav ml-auto">
+                                  <li class="nav-item active">
+                                    <a class="nav-link" href="index.html">Home</a>
+                                  </li>
+                                  <li class="nav-item">
+                                    <a class="nav-link" href="cliffs.html">Cliffs</a>
+                                  </li>
+                                  <li class="nav-item">
+                                    <a class="nav-link" href="activities.html">Activities</a>
+                                  </li>
+                                  <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Contact</a>
+                                  </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </nav>
                      </div>
+            <header>
             </header> 
             <section id="timeofday">
                 <span>Your Current Local Time:</span>
@@ -60,6 +80,13 @@
     </div>
     </footer>
     </div>
+     <!-- Bootstrap jQuery -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <!-- Bootstrap Popper -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+     <!-- Bootstrap JS -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- javascript codes -->
     <script src="js/digclock.js"></script>
     <script src="js/site_script.js"></script>
