--- a/activities.html
+++ b/activities.html
@@ -11,7 +11,7 @@
     <body id="activities">
         <!-- Container to wrap everything -->
         <div id="container">
-            <div class ="main-header">
+            <div class ="main-header sticky-top">
                 <nav class="main-menu navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container">
                         <div class="logo">
