--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body id="home">
         <!-- Container to wrap everything -->
         <div id="container">
-                  <div class ="main-header">
+                  <div class ="main-header sticky-top">
                         <!-- <div class="logo">
                             <img src="images/logo.png" alt="Great Cliff's Logo" width="125">
                         </div> -->
