--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <header>
             </header> 
             <!--  Main Content -->
-            <main>
+            <main class="border p-3 border-secondary" >
                 <h1>Contacting Us</h1>
                 <p>
                 You can drop by the visitors information center at the cliff site that you plan on visiting. They are open
@@ -62,17 +62,22 @@
                         <span>info@greatcliffs.com</span>
                     </div>
                 </div>
-                
                 <form action="/contact" method="post">  
                 <fieldset>  
                     <legend>Contact Form</legend>
                     <div class="textbox">
-                        <label>Name:</label> 
-                        <input type="text" name="name" placeholder="John Doe">  
-                        <label>Email:</label>  
-                        <input type="email" name="email" placeholder="johndoe@gmail.com"> 
-                        <label>Phone:</label>
-                        <input type="text" name="phone" placeholder="xxx-xxx-xxxx"> 
+                        <div class="form-group">
+                            <label>Name:</label> 
+                            <input type="text" class="form-control" name="name" placeholder="John Doe">  
+                        </div>
+                        <div class="form-group">
+                            <label>Email:</label>  
+                        <input type="email" name="email" class="form-control" placeholder="johndoe@gmail.com"> 
+                        </div>
+                        <div class="form-group">
+                            <label>Phone:</label>
+                            <input type="text" name="phone" class="form-control" placeholder="xxx-xxx-xxxx"> 
+                        </div>
                     </div>
                     
                     <div class="radios">
@@ -123,9 +128,9 @@
                 <div  id="nondisclaimer">
                     <div class="copy">&copy;Copyright 2020 :: GreatCliffs.com</div>
                     <div class="social">
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-instagram"></a>
-                        <a href="#" class="fa fa-twitter" ></a>
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-twitter" ></a>
                     </div>
                 </div>
                 <div  id="disclaimer">
