--- a/activities.html
+++ b/activities.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title >Great Cliff's of California</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                 <!-- Bootstrap CSS -->
@@ -61,6 +62,7 @@
       <main>
         <h1>Activities</h1>
         <p>There are many planned activities at all the cliff sites. Some are scheduled daily, weekly, monthly and yearly. These activities are not however run by the state park and recreational department. They are operated and manage by private vendors but are partners with the state department. Therefore, for schedule inquiries or information, please contact them directly. For a list of activities, please refer to the table below:</p>
+       <div class="table-responsive">
         <table>
             <caption>Activities at the Cliffs</caption>
             <thead></thead>
@@ -102,7 +104,10 @@
                 </tr>
             </tbody>
         </table>
-        <div id = "displaySelected">
+       </div>
+       
+        <!-- commented below code showing value in modal now -->
+        <!-- <div id = "displaySelected">
             <div id = "result">
                 <h4>My selected activities to enquire:</h4>
             </div>
@@ -110,8 +115,7 @@
                 <input type="email" placeholder="johndoe@gmail.com">
                 <button>Get Info</button>
             </div>
-
-        </div>
+        </div> -->
         
             <!-- The Modal -->
             <div class="modal" id="myModal">
