--- a/cliffs.html
+++ b/cliffs.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title >Great Cliff's of California</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap CSS -->
