--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title >Great Cliff's of California</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <!-- Bootstrap CSS -->
@@ -44,7 +45,7 @@
             <header>
             </header> 
             <!--  Main Content -->
-            <main class="border p-3 border-secondary" >
+            <main>
                 <h1>Contacting Us</h1>
                 <p>
                 You can drop by the visitors information center at the cliff site that you plan on visiting. They are open
@@ -62,22 +63,17 @@
                         <span>info@greatcliffs.com</span>
                     </div>
                 </div>
+                <div class="border p-3 border-secondary">
                 <form action="/contact" method="post">  
                 <fieldset>  
                     <legend>Contact Form</legend>
                     <div class="textbox">
-                        <div class="form-group">
-                            <label>Name:</label> 
-                            <input type="text" class="form-control" name="name" placeholder="John Doe">  
-                        </div>
-                        <div class="form-group">
-                            <label>Email:</label>  
-                        <input type="email" name="email" class="form-control" placeholder="johndoe@gmail.com"> 
-                        </div>
-                        <div class="form-group">
-                            <label>Phone:</label>
-                            <input type="text" name="phone" class="form-control" placeholder="xxx-xxx-xxxx"> 
-                        </div>
+                        <label>Name:</label> 
+                        <input type="text" name="name" placeholder="John Doe">  
+                        <label>Email:</label>  
+                        <input type="email" name="email" placeholder="johndoe@gmail.com"> 
+                        <label>Phone:</label>
+                        <input type="text" name="phone" placeholder="xxx-xxx-xxxx"> 
                     </div>
                     
                     <div class="radios">
@@ -113,6 +109,8 @@
                     </div> 
                 </fieldset>  
                 </form>
+            </div>
+                </main>
             </main> 
             <section>
                 <ul id="partners">
@@ -128,9 +126,9 @@
                 <div  id="nondisclaimer">
                     <div class="copy">&copy;Copyright 2020 :: GreatCliffs.com</div>
                     <div class="social">
-                        <a href="#" class="fab fa-facebook"></a>
-                        <a href="#" class="fab fa-instagram"></a>
-                        <a href="#" class="fab fa-twitter" ></a>
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter" ></a>
                     </div>
                 </div>
                 <div  id="disclaimer">
