--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title >Great Cliff's of California</title>
+         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                 <!-- Bootstrap CSS -->
@@ -53,10 +54,35 @@
        <!--  Main Content -->
        <main>
         <h1>Introducing California's Greatest Cliffs</h1>
-        <h3>What is so unique about California cliffs?</h3>
-        <p>California cliffs are one of a kind in the United States where no cliffs are as magnificent and beautiful as them. And California is the only state that have cliffs that fronts all possible environments: sea, river, mountains and canyons. There are four such individual unique cliffs: West Cliff, North Cliff, East Cliff and South Cliff. All offer fantastic overlooking views, recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
-        <h3>Where are these cliffs?</h3>
-        <p>Located within a 100 mile radius from Irvine, California, they can be reached by roads easily. The closest cliff to Irvine is West Cliff, which is the most popular and most visited.</p>
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+              <div class="border mr-md-3 p-3 border-secondary">
+                <div>
+                    <h2>What is so unique about California cliffs?</h2>
+                    <p>
+                        California cliffs are one of a kind in the United States where
+                        no cliffs are as magnificent and beautiful as them. And
+                        California is the only state that has cliffs that fronts all
+                        possible environments: sea, river, mountains, and canyons. There
+                        are four such individual unique cliffs: West Cliff, North Cliff,
+                        East Cliff, and South Cliff. All offer fantastic overlooking
+                        views, recreational areas, camping sites, wildlife watch spots,
+                        and overnight cabins.
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <div class="border mr-md-3 p-3 border-secondary">
+                <h2>Where are these cliffs?</h2>
+                <p>
+                    Located within a 100-mile radius from Irvine, California, they
+                    can be reached by roads easily. The closest cliff to Irvine is
+                    West Cliff, which is the most popular and most visited.
+                </p>
+              </div>
+            </div>
+        </div>
     </main> <!-- End  Main Content -->
     <section>
         <ul id="partners">
